# attestable

./: README.md  pyproject.toml
src/attestable/: cli.py  escalation.py  evidence.py  extract.py  gate.py  pipeline.py  population.py  predicates.py  serial.py  types.py  verdict.py  workpaper.py
src/attestable.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/attestable/audit/: canonical.py  log.py  replay.py
src/attestable/connectors/: api.py  base.py  orchestrate.py
src/attestable/controls/: definition.py  user_access_sod.py
src/attestable/eval/: labeled.py  naive.py  run_eval.py  score.py  scorecard.py
src/attestable/llm/: anthropic_client.py  client.py  replay_client.py
src/attestable/scenarios/: build_scenarios.py
src/attestable/sor/: app.py
tests/: conftest.py  test_adversarial_citation.py  test_api_connector.py  test_audit_log.py  test_audit_replay.py  test_canonical.py  test_connector_base.py  test_connector_e2e.py  test_control_user_access_sod.py  test_escalation.py  test_eval_ablation.py  test_eval_labeled.py  test_eval_naive.py  test_eval_score.py  test_eval_scorecard.py  test_evidence.py  test_evidence_raw.py  test_extract.py  test_gate.py  test_orchestrate.py  test_pipeline_e2e.py  test_population_e2e.py  test_population_read.py  test_population_replay.py  test_population_run.py  test_population_summary.py  test_predicates.py  test_replay_acquisition.py  test_replay_client.py  test_sor.py  test_tamper.py  test_types.py  test_verdict.py  test_workpaper.py
