[project]
name = "attestable"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["openpyxl>=3.1", "anthropic>=0.34"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
